crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-sqlite[file]_clickbench_q30.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: clickbench_q30"
---
+---------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+
| sum(hits.ResolutionWidth) | sum(hits.ResolutionWidth + Int64(1)) | sum(hits.ResolutionWidth + Int64(2)) | sum(hits.ResolutionWidth + Int64(3)) | sum(hits.ResolutionWidth + Int64(4)) | sum(hits.ResolutionWidth + Int64(5)) | sum(hits.ResolutionWidth + Int64(6)) | sum(hits.ResolutionWidth + Int64(7)) | sum(hits.ResolutionWidth + Int64(8)) | sum(hits.ResolutionWidth + Int64(9)) | sum(hits.ResolutionWidth + Int64(10)) | sum(hits.ResolutionWidth + Int64(11)) | sum(hits.ResolutionWidth + Int64(12)) | sum(hits.ResolutionWidth + Int64(13)) | sum(hits.ResolutionWidth + Int64(14)) | sum(hits.ResolutionWidth + Int64(15)) | sum(hits.ResolutionWidth + Int64(16)) | sum(hits.ResolutionWidth + Int64(17)) | sum(hits.ResolutionWidth + Int64(18)) | sum(hits.ResolutionWidth + Int64(19)) | sum(hits.ResolutionWidth + Int64(20)) | sum(hits.ResolutionWidth + Int64(21)) | sum(hits.ResolutionWidth + Int64(22)) | sum(hits.ResolutionWidth + Int64(23)) | sum(hits.ResolutionWidth + Int64(24)) | sum(hits.ResolutionWidth + Int64(25)) | sum(hits.ResolutionWidth + Int64(26)) | sum(hits.ResolutionWidth + Int64(27)) | sum(hits.ResolutionWidth + Int64(28)) | sum(hits.ResolutionWidth + Int64(29)) | sum(hits.ResolutionWidth + Int64(30)) | sum(hits.ResolutionWidth + Int64(31)) | sum(hits.ResolutionWidth + Int64(32)) | sum(hits.ResolutionWidth + Int64(33)) | sum(hits.ResolutionWidth + Int64(34)) | sum(hits.ResolutionWidth + Int64(35)) | sum(hits.ResolutionWidth + Int64(36)) | sum(hits.ResolutionWidth + Int64(37)) | sum(hits.ResolutionWidth + Int64(38)) | sum(hits.ResolutionWidth + Int64(39)) | sum(hits.ResolutionWidth + Int64(40)) | sum(hits.ResolutionWidth + Int64(41)) | sum(hits.ResolutionWidth + Int64(42)) | sum(hits.ResolutionWidth + Int64(43)) | sum(hits.ResolutionWidth + Int64(44)) | sum(hits.ResolutionWidth + Int64(45)) | sum(hits.ResolutionWidth + Int64(46)) | sum(hits.ResolutionWidth + Int64(47)) | sum(hits.ResolutionWidth + Int64(48)) | sum(hits.ResolutionWidth + Int64(49)) | sum(hits.ResolutionWidth + Int64(50)) | sum(hits.ResolutionWidth + Int64(51)) | sum(hits.ResolutionWidth + Int64(52)) | sum(hits.ResolutionWidth + Int64(53)) | sum(hits.ResolutionWidth + Int64(54)) | sum(hits.ResolutionWidth + Int64(55)) | sum(hits.ResolutionWidth + Int64(56)) | sum(hits.ResolutionWidth + Int64(57)) | sum(hits.ResolutionWidth + Int64(58)) | sum(hits.ResolutionWidth + Int64(59)) | sum(hits.ResolutionWidth + Int64(60)) | sum(hits.ResolutionWidth + Int64(61)) | sum(hits.ResolutionWidth + Int64(62)) | sum(hits.ResolutionWidth + Int64(63)) | sum(hits.ResolutionWidth + Int64(64)) | sum(hits.ResolutionWidth + Int64(65)) | sum(hits.ResolutionWidth + Int64(66)) | sum(hits.ResolutionWidth + Int64(67)) | sum(hits.ResolutionWidth + Int64(68)) | sum(hits.ResolutionWidth + Int64(69)) | sum(hits.ResolutionWidth + Int64(70)) | sum(hits.ResolutionWidth + Int64(71)) | sum(hits.ResolutionWidth + Int64(72)) | sum(hits.ResolutionWidth + Int64(73)) | sum(hits.ResolutionWidth + Int64(74)) | sum(hits.ResolutionWidth + Int64(75)) | sum(hits.ResolutionWidth + Int64(76)) | sum(hits.ResolutionWidth + Int64(77)) | sum(hits.ResolutionWidth + Int64(78)) | sum(hits.ResolutionWidth + Int64(79)) | sum(hits.ResolutionWidth + Int64(80)) | sum(hits.ResolutionWidth + Int64(81)) | sum(hits.ResolutionWidth + Int64(82)) | sum(hits.ResolutionWidth + Int64(83)) | sum(hits.ResolutionWidth + Int64(84)) | sum(hits.ResolutionWidth + Int64(85)) | sum(hits.ResolutionWidth + Int64(86)) | sum(hits.ResolutionWidth + Int64(87)) | sum(hits.ResolutionWidth + Int64(88)) | sum(hits.ResolutionWidth + Int64(89)) |
+---------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+
| 14792747310               | 14802400522                          | 14812053734                          | 14821706946                          | 14831360158                          | 14841013370                          | 14850666582                          | 14860319794                          | 14869973006                          | 14879626218                          | 14889279430                           | 14898932642                           | 14908585854                           | 14918239066                           | 14927892278                           | 14937545490                           | 14947198702                           | 14956851914                           | 14966505126                           | 14976158338                           | 14985811550                           | 14995464762                           | 15005117974                           | 15014771186                           | 15024424398                           | 15034077610                           | 15043730822                           | 15053384034                           | 15063037246                           | 15072690458                           | 15082343670                           | 15091996882                           | 15101650094                           | 15111303306                           | 15120956518                           | 15130609730                           | 15140262942                           | 15149916154                           | 15159569366                           | 15169222578                           | 15178875790                           | 15188529002                           | 15198182214                           | 15207835426                           | 15217488638                           | 15227141850                           | 15236795062                           | 15246448274                           | 15256101486                           | 15265754698                           | 15275407910                           | 15285061122                           | 15294714334                           | 15304367546                           | 15314020758                           | 15323673970                           | 15333327182                           | 15342980394                           | 15352633606                           | 15362286818                           | 15371940030                           | 15381593242                           | 15391246454                           | 15400899666                           | 15410552878                           | 15420206090                           | 15429859302                           | 15439512514                           | 15449165726                           | 15458818938                           | 15468472150                           | 15478125362                           | 15487778574                           | 15497431786                           | 15507084998                           | 15516738210                           | 15526391422                           | 15536044634                           | 15545697846                           | 15555351058                           | 15565004270                           | 15574657482                           | 15584310694                           | 15593963906                           | 15603617118                           | 15613270330                           | 15622923542                           | 15632576754                           | 15642229966                           | 15651883178                           |
+---------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+--------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+---------------------------------------+
