crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-sqlite[file]_clickbench_q5.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: clickbench_q5"
---
+-----------------------------+
| count(DISTINCT hits.UserID) |
+-----------------------------+
| 1746404                     |
+-----------------------------+
