crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-sqlite[memory]_clickbench_q26.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: clickbench_q26"
---
+------------------------------------------------+
| SearchPhrase                                   |
+------------------------------------------------+
| 'exis disco ryder injected cuda 7269           |
| 'kbnyst exfcnm vekmnbdfhrf                     |
| (095) 500                                      |
| (http://kommedium=cpc&utm_source=main происход |
| +100500 4.5 отзывы                             |
| +100500 4.5 отзывы                             |
| +100500 4.5 отзывы                             |
| +100500 4.5 отзывы                             |
| +100500 4.5 отзывы                             |
| +100500 4.5 отзывы                             |
+------------------------------------------------+
